# PersonalWebsite

./: .gitignore  AGENTS.md  pyproject.toml
backend/: db.py  main.py  requirements.txt
backend/data/: .seed_state.json  blogs_seed.json  knowledge_base.json  projects_seed.json  rag.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BlogCard.jsx  Footer.jsx  Navbar.jsx  ProjectCard.jsx
frontend/src/pages/: BlogDetailPage.jsx  BlogPage.jsx  ChatPage.jsx  HomePage.jsx  ProjectsPage.jsx
