[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi==0.109.2",
    "langchain>=1.0.1",
    "langchain-community",
    "langchain-core",
    "langchain-openai>=1.0.0",
    "langgraph",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]==0.27.0",
]
